syntax = "proto3";

package user;

import "commproto/comm.proto";

// -----------------  entity module -----------------\
message EntityBagModule {
  string ID = 1;  // actor id
  
  // key: Dictionary ID of the item
  // value: For a given dictionary ID, there may be multiple non-stackable item instances
  map<int32, commproto.ItemList> Bag = 2;
}

message EntityTimeInfoModule {
  string ID = 1;  // actor id

  int64 LoginTime = 2;
  int64 SyncTime = 3;
  int64 CreateTime = 4;
}

message AirshipProduction {
  string ProductionID = 1;
  int64 EndTime = 3;
}

message EntityAirshipModule {
  string ID = 1; // actor id

  AirshipProduction Production = 2; // build queue
}

// -----------------  entity -----------------
message EntityUserModule {
  string ID = 1; // account actor id
  string OpenID = 2; // 3rd party open id
  string Token = 3;

  string CurChannel = 4;
  repeated string ChatChannels = 5; // Current chat channels the user is in
}